fieldx/tests/uncompilable/stable+serde,sync,async-tokio/private.stderr
error[E0624]: method `read_foo` is private
 --> tests/uncompilable/private.rs
  |
  |         #[fieldx(vis(), lazy, reader)]
  |                               ------ private method defined here
...
  |     let foo = inner.read_foo();
  |                     ^^^^^^^^ private method
